--- a/Changes
+++ b/Changes
@@ -5,6 +5,11 @@ Created:      2011-11-28
 Home page:    <https://metacpan.org/release/Object-Stash>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Object-Stash>
 
+0.002  2011-11-30
+
+ - Test case for stash destruction.
+ - (Bugfix) Pretty important fieldhashes compile-time-versus-run-time fix.
+
 0.001  2011-11-28
 # Initial release
 
