--- a/Changes
+++ b/Changes
@@ -5,6 +5,10 @@ Created:      2011-11-28
 Home page:    <https://metacpan.org/release/Object-Stash>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Object-Stash>
 
+0.004  2011-12-03
+
+ - (Packaging) Update to newer Module::Package::RDF.
+
 0.003001  2011-12-02
 
 
