--- a/Changes
+++ b/Changes
@@ -5,6 +5,12 @@ Created:      2011-11-28
 Home page:    <https://metacpan.org/release/Object-Stash>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Object-Stash>
 
+0.005  2011-12-03
+
+ - (Addition) Retrieve multiple values from a stash by passing it an
+   arrayref.
+ - (Addition) Blessed stashes with getters/setters.
+
 0.004  2011-12-03
 
  - (Packaging) Update to newer Module::Package::RDF.
