--- a/Changes
+++ b/Changes
@@ -4,30 +4,36 @@ Object-Stash
 Created:      2011-11-28
 Home page:    <https://metacpan.org/release/Object-Stash>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=Object-Stash>
+Maintainer:   Toby Inkster <tobyink@cpan.org>
 
-0.005  2011-12-03
+0.006	2014-09-10
 
- - (Addition) Retrieve multiple values from a stash by passing it an
-   arrayref.
- - (Addition) Blessed stashes with getters/setters.
+ [ Packaging ]
+ - Switch to Dist::Inkt.
 
-0.004  2011-12-03
+0.005	2011-12-03
 
- - (Packaging) Update to newer Module::Package::RDF.
+ - Added: Blessed stashes with getters/setters.
+ - Added: Retrieve multiple values from a stash by passing it an arrayref.
 
-0.003001  2011-12-02
+0.004	2011-12-03
 
+ [ Packaging ]
+ - Update to newer Module::Package::RDF.
 
-0.003  2011-12-01
+0.003001	2011-12-02
 
- - (Packaging) List correct dependencies.
+0.003	2011-12-01
 
-0.002  2011-11-30
+ [ Packaging ]
+ - List correct dependencies.
 
+0.002	2011-11-30
+
+ [ Bug Fixes ]
+ - Pretty important fieldhashes compile-time-versus-run-time fix.
+
+ [ Other ]
  - Test case for stash destruction.
- - (Bugfix) Pretty important fieldhashes compile-time-versus-run-time fix.
 
-0.001  2011-11-28
-# Initial release
-
-
+0.001	2011-11-28	Initial release
